package pt.ipp.isep.dei.esoft.project.domain;

public enum GreenSpaceType {
    GARDEN,
    MEDIUM_SIZED_PARK,
    LARGE_SIZED_PARK
}