@startuml

'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype ortho

skinparam classAttributeIconSize 0

'left to right direction

class ApplicationSession {
    + static getInstance()
    + getCurrentSession()
}

class UserSession {
    + getUserEmail()
}

class GreenSpace {
    - name: String
    - area: double
    - type: GreenSpaceType

    + GreenSpace(name: String, area: double, type: GreenSpaceType)
    + getName(): String
    + getArea(): double
    + getType(): GreenSpaceType
    + displayDetails(): void
}

enum GreenSpaceType {
    GARDEN
    MEDIUM_SIZED_PARK
    LARGE_SIZED_PARK
}

class GreenSpaceRepository {
    - greenSpaces: List<GreenSpace>

    + addGreenSpace(greenSpace: GreenSpace): void
    + getGreenSpaces(): List<GreenSpace>
}

class RegisterGreenSpaceController {
    - greenSpaceRepository: GreenSpaceRepository

    + RegisterGreenSpaceController(greenSpaceRepository: GreenSpaceRepository)
    + registerGreenSpace(name: String, area: double, type: GreenSpaceType): void
    + getAllGreenSpaces(): List<GreenSpace>
}

ApplicationSession -> ApplicationSession : instance

RegisterGreenSpaceController .> GreenSpaceRepository

GreenSpaceRepository -> "1" GreenSpaceRepository : instance

RegisterGreenSpaceController ..> GreenSpace : greenSpace
RegisterGreenSpaceController ..> GreenSpaceRepository : GreenSpaceRepository

' Legenda
GreenSpaceRepository --> GreenSpace : Green Spaces

@enduml
